// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BadgeComponent Classes and ngClass should pass classNames to the component 1`] = `
<ng-component>
  <md-badge
    class="third fourth md-badge first second md-badge--blue md-badge--round"
    color="blue"
    ng-reflect-color="blue"
    ng-reflect-klass="third fourth"
    ng-reflect-ng-class="first second"
    ng-reflect-rounded="true"
  >
    Testing Classes
  </md-badge>
</ng-component>
`;

exports[`BadgeComponent Default, Rounded and Colors should assign conditional color class name 1`] = `
<md-badge
  _color={[Function String]}
  elementRef={[Function ElementRef]}
  rounded="false"
>

</md-badge>
`;

exports[`BadgeComponent Default, Rounded and Colors should assign conditional rounded class name 1`] = `
<md-badge
  _color="null"
  elementRef={[Function ElementRef]}
  rounded={[Function Boolean]}
>

</md-badge>
`;

exports[`BadgeComponent Default, Rounded and Colors should create and match snapshot 1`] = `
<md-badge
  _color="null"
  elementRef={[Function ElementRef]}
  rounded="false"
>

</md-badge>
`;
